# SkeetSDK

./: .gitignore  CMakeLists.txt  README.md  skeet-sdk.sln
SkeetSDK/: Example.cpp  Skeet.h
skeet-sdk/: dllmain.cpp  includes.h  skeet-sdk.vcxproj  skeet-sdk.vcxproj.filters  skeetsdk.h
